@@ -6,28 +6,41 @@ TOPDIR  = ../..
 
 include $(TOPDIR)/common.mk
 
-OSTYPE  = $(shell uname -o | sed --e 's/GNU\///' --e 's/Linux/linux/' --e 's/Msys/windows/')
+_SRCPREFIX = /usr/include/postgresql
+_LIBPREFIX = /usr/lib/$(MACHINE)-$(OSTYPE)
+_BINPREFIX = $(LIBPREFIX)
+
+OSTYPE  = $(shell uname -o | sed --e 's/GNU\///' --e 's/Linux/linux-gnu/' --e 's/Msys/windows/')
 ifneq ($(findstring Darwin,$(_DETPLAT_STR)),)
 	OSTYPE  = macos
 	ifneq ($(findstring aarch64,$(MACHINE)),)
-		_SRCPREFIX = /opt/homebrew/opt/libpq
+		_SRCPREFIX = /opt/homebrew/opt/libpq/include
+		_LIBPREFIX = /opt/homebrew/opt/libpq/lib
+		_BINPREFIX = $(LIBPREFIX)
 	else
-		_SRCPREFIX = /usr/local/opt/libpq
+		_SRCPREFIX = /usr/local/opt/libpq/include
+		_LIBPREFIX = /ust/local/opt/libpq/lib
+		_BINPREFIX = $(LIBPREFIX)
 	endif
 else
 ifneq ($(findstring MINGW64,$(MSYSTEM)),)
-#	_SRCPREFIX = /mingw64
+#	_SRCPREFIX = /mingw64/include
 # MSYS2 on GitHub actions does not have CLANG64 shell? except we still like to look for libs built by Clang
-	_SRCPREFIX = /clang64
+	_SRCPREFIX = /clang64/include
+	_LIBPREFIX = /clang64/lib
+	_BINPREFIX = /clang64/bin
 else
 ifneq ($(findstring CLANG64,$(MSYSTEM)),)
-	_SRCPREFIX = /clang64
+	_SRCPREFIX = /clang64/include
+	_LIBPREFIX = /clang64/lib
+	_BINPREFIX = /clang64/bin
 endif
 endif
 endif
 
-_PKGVER := $(shell grep '#define PACKAGE_VERSION' $(_SRCPREFIX)/include/pg_config.h | sed -E 's/^#define PACKAGE_VERSION "(.*)"/\1/')
-ifneq ($(_PKGVER),) 
+_PKGVER := $(shell ./pkgver.sh $(_SRCPREFIX))
+_PKGVER := $(subst $(subst x, ,x),,$(_PKGVER))
+ifneq ($(_PKGVER),)
 	PKGVER = $(_PKGVER)
 endif
 
@@ -49,14 +62,14 @@ do-pkginst:
 	mkdir -p dest/bin/dist-libpq
 	mkdir -p dest/include
 	cd dest
-	cp -r $(_SRCPREFIX)/lib/libpq* dest/lib
-	cp -r $(_SRCPREFIX)/bin/libpq* dest/bin
-	-cp -r $(_SRCPREFIX)/bin/libintl* dest/bin/dist-libpq
-	-cp -r $(_SRCPREFIX)/bin/libiconv* dest/bin/dist-libpq
-	-cp -r $(_SRCPREFIX)/bin/libssl* dest/bin/dist-libpq
-	-cp -r $(_SRCPREFIX)/bin/libcrypto* dest/bin/dist-libpq
-	-cp -r $(_SRCPREFIX)/include/libpq dest/include
-	cp -r $(_SRCPREFIX)/include/libpq-*.h dest/include
-	cp -r $(_SRCPREFIX)/include/pg_config.h dest/include
-	-cp -r $(_SRCPREFIX)/include/pg_config_ext.h dest/include
-	-cp -r $(_SRCPREFIX)/include/postgres_ext.h dest/include                 
+	cp -r $(_LIBPREFIX)/libpq* dest/lib
+	-cp -r $(_BINPREFIX)/libpq* dest/bin
+	-cp -r $(_BINPREFIX)/libintl* dest/bin/dist-libpq
+	-cp -r $(_BINPREFIX)/libiconv* dest/bin/dist-libpq
+	-cp -r $(_BINPREFIX)/libssl* dest/bin/dist-libpq
+	-cp -r $(_BINPREFIX)/libcrypto* dest/bin/dist-libpq
+	-cp -r $(_SRCPREFIX)/libpq dest/include
+	cp -r $(_SRCPREFIX)/libpq-*.h dest/include
+	cp -r $(_SRCPREFIX)/pg_config.h dest/include
+	-cp -r $(_SRCPREFIX)/pg_config_ext.h dest/include
+	-cp -r $(_SRCPREFIX)/postgres_ext.h dest/include
